# mcp-scan

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.staging.yml  docker-compose.yml  eslint.config.js  jest.config.js  openapi.yaml  package-lock.json  package.json
.github/workflows/: ci.yml  pages.yml  publish.yml
api/: jest.config.js  package-lock.json  package.json
api/src/: server.ts  types.ts
api/src/routes/: scans.ts  webhooks.ts
api/src/services/: store.ts  webhook.ts
api/tests/integration/: scan-flow.test.ts
deploy/: production.env.example  staging.env.example
docs/: index.html  runbook.md  terminal-demo.html
sdk/python/: pyproject.toml
sdk/python/mcp_scan_client/: __init__.py  client.py  models.py
sdk/typescript/: package.json
sdk/typescript/src/: client.ts  index.ts  types.ts
src/: billing.ts  cli.ts  index.ts  live-scanner.ts  scanner.ts  server.ts  trust-score.ts  types.ts  walker.ts
src/__tests__/: cli.test.ts  formatters.test.ts  live-scanner.integration.test.ts  rules-extended.test.ts  rules.test.ts  scanner-edge-cases.test.ts  scanner-rule-types.test.ts  scanner.test.ts  walker.test.ts
src/formatters/: sarif.ts  text.ts
src/rules/: index.ts
tests/fixtures/: clean-schema.json  clean-server.ts  injection-server.ts  mock-mcp-http-server.ts  multi-issue-server.ts  ssrf-server.ts  vulnerable-server.json
