[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-scan-client"
version = "0.1.0"
description = "Python client for the mcp-scan REST API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Syntrophy Foundry" }]
requires-python = ">=3.9"
keywords = ["mcp", "security", "scanner", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_scan_client"]
